# BIG-quantumhack

./: .gitignore  README.md  pyproject.toml
.aqora/data/: use_case.toml
.aqora/last_run/: 0.msgpack  result.msgpack
submission/: Guillaume_test.ipynb  Leonardo_test.ipynb  hugo_test.ipynb  metric.ipynb  random_graph_1.ipynb  solution.ipynb  square_graph.ipynb
submission/src/: Annealing.py  GRAPH_LDF.py  QAA.py  QAOA.py  QAOA_func.py  graphs.py  qubo.py  register_optimizer.py
submission/test/: Guillaume_test.ipynb  Leonardo_test.ipynb  hugo_test.ipynb
