[project]
name = "submission"
version = "0.1.0"
requires-python = ">=3.9"

dependencies = []

[build-system]
requires = ["uv", "setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["submission"]

[tool.setuptools.package-data]
submission = ["*"]

[tool.aqora]
type = "submission"
entity = "paris_hack_team_5"
competition = "paris-hack-24-ansys"

[tool.aqora.refs]
solution = { path = "submission.solution", notebook = true }
metric = { path = "submission.metric", notebook = true }
